fix: bannertext color contrast ratio

--- a/components/common/banner-text/banner-text.module.scss
+++ b/components/common/banner-text/banner-text.module.scss
@@ -1,7 +1,7 @@
 .d-container {
   @apply -mt-1;
   &__inline-wrapper {
-    @apply bg-[var(--gs-color-primary)];
+    @apply bg-blue-11;
     @apply text-white;
     @apply inline-block;
     @apply text-nowrap;
